# aoc

./: LICENSE  README.md
2020/1/: part1.sh  part2.sh
2020/10/: Cargo.toml
2020/10/src/: main.rs
2020/11/: Cargo.toml
2020/11/src/: main.rs
2020/12/: Cargo.toml
2020/12/src/: main.rs
2020/2/: part1.sh  part2.sh
2020/3/: part1.sh  part2.sh
2020/4/: part1.sh  part2.sh
2020/5/: part1.sh  part2.sh
2020/6/: part1.sh  part2.sh
2020/7/: Cargo.toml
2020/7/src/: main.rs
2020/8/: Cargo.toml
2020/8/src/: main.rs
2020/9/: Cargo.toml
2020/9/src/: main.rs
2021/1/src/: main.rs
2021/10/src/: main.rs
2021/11/src/: main.rs
2021/12/src/: main.rs
2021/13/src/: main.rs
2021/14/src/: main.rs
2021/15/src/: main.rs
2021/16/src/: main.rs
2021/17/src/: main.rs
2021/2/src/: main.rs
2021/3/src/: main.rs
2021/4/: puzzle.txt  puzzlenums.txt
2021/4/src/: main.rs
2021/5/src/: main.rs
2021/6/src/: main.rs
2021/7/src/: main.rs
2021/8/src/: main.rs
2021/9/src/: main.rs
2022/1/src/: main.rs
2022/10/src/: main.rs
2022/11/src/: main.rs
2022/12/: Cargo.toml
2022/13/: Cargo.toml
2022/14/: Cargo.toml
2022/15/: Cargo.toml
2023/1/: Cargo.toml
2023/10/: Cargo.toml
2023/10/src/: main.rs
2023/12/: Cargo.toml
2023/13/: Cargo.toml
2023/14/: Cargo.toml
2023/15/: Cargo.toml
2023/2/: Cargo.toml
2023/3/: Cargo.toml
2023/4/: Cargo.toml
2023/5/: Cargo.toml
2023/6/: Cargo.toml
2023/7/: Cargo.toml
2023/8/: Cargo.toml
2023/9/: Cargo.toml
2024/1/: Cargo.toml
2024/3/: Cargo.toml
tpl/src/: main.rs
(+29 files in other folders)
