[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
regex = "1.7"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
termion = "2.0"
num = "0.4"
